# django-celery

./: Pipfile  README.md  pyproject.toml
core/: settings.py
feedback/: forms.py
