[tool.poetry]
name = "django-celery"
version = "0.1.0"
description = ""
authors = ["carvalhocaio <caiocarvalho.py@gmail.com>"]
readme = "README.md"
packages = [{include = "django_celery"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
redis = "^4.5.5"
flower = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
